fixed spacing

--- a/src/Pages/calculator.css
+++ b/src/Pages/calculator.css
@@ -46,6 +46,7 @@ input {
   padding: 10px 15px;
   margin-bottom: 10px;
   font-size: 14px;
+  text-align: center;
 }
 
 label {
